// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate 1`] = `
{
  "getActionQuery": "query getActionQuery($id: UUID!) {
  action(id: $id) {
    id
    name
    approved
  }
}
",
  "getActionsPaginated": "query getActionsPaginated($first: Int, $last: Int, $offset: Int, $after: Cursor, $before: Cursor, $condition: ActionCondition, $filter: ActionFilter, $orderBy: [ActionsOrderBy!]) {
  actions(
    first: $first
    last: $last
    offset: $offset
    after: $after
    before: $before
    condition: $condition
    filter: $filter
    orderBy: $orderBy
  ) {
    totalCount
    pageInfo {
      hasNextPage
      hasPreviousPage
      endCursor
      startCursor
    }
    edges {
      cursor
      node {
        id
        name
        approved
      }
    }
  }
}
",
  "getActionsQuery": "query getActionsQuery($first: Int, $last: Int, $after: Cursor, $before: Cursor, $offset: Int, $condition: ActionCondition, $filter: ActionFilter, $orderBy: [ActionsOrderBy!]) {
  actions(
    first: $first
    last: $last
    offset: $offset
    after: $after
    before: $before
    condition: $condition
    filter: $filter
    orderBy: $orderBy
  ) {
    totalCount
    pageInfo {
      hasNextPage
      hasPreviousPage
      endCursor
      startCursor
    }
    nodes {
      id
      name
      approved
    }
  }
}
",
  "getActionsQueryAll": "query getActionsQueryAll {
  actions {
    totalCount
    nodes {
      id
      name
      approved
    }
  }
}
",
}
`;

exports[`generate w count info 1`] = `
{
  "getActionItemQuery": "query getActionItemQuery($id: UUID!) {
  actionItem(id: $id) {
    userActionItems
  }
}
",
  "getActionItemsPaginated": "query getActionItemsPaginated($first: Int, $last: Int, $offset: Int, $after: Cursor, $before: Cursor, $condition: ActionItemCondition, $filter: ActionItemFilter, $orderBy: [ActionItemsOrderBy!]) {
  actionItems(
    first: $first
    last: $last
    offset: $offset
    after: $after
    before: $before
    condition: $condition
    filter: $filter
    orderBy: $orderBy
  ) {
    totalCount
    pageInfo {
      hasNextPage
      hasPreviousPage
      endCursor
      startCursor
    }
    edges {
      cursor
      node {
        userActionItems
      }
    }
  }
}
",
  "getActionItemsQuery": "query getActionItemsQuery($first: Int, $last: Int, $after: Cursor, $before: Cursor, $offset: Int, $condition: ActionItemCondition, $filter: ActionItemFilter, $orderBy: [ActionItemsOrderBy!]) {
  actionItems(
    first: $first
    last: $last
    offset: $offset
    after: $after
    before: $before
    condition: $condition
    filter: $filter
    orderBy: $orderBy
  ) {
    totalCount
    pageInfo {
      hasNextPage
      hasPreviousPage
      endCursor
      startCursor
    }
    nodes {
      userActionItems
    }
  }
}
",
  "getActionItemsQueryAll": "query getActionItemsQueryAll {
  actionItems {
    totalCount
    nodes {
      userActionItems
    }
  }
}
",
}
`;
